--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,9 +46,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\CameraController.cs" />
      <Compile Include="Assets\Scripts\GameObjectsManager.cs" />
      <Compile Include="Assets\Scripts\ObjectPropertiesEditor.cs" />
+     <Compile Include="Assets\Scripts\Player.cs" />
      <Compile Include="Assets\Scripts\SpawnPrimitiveOnClick.cs" />
+     <Compile Include="Assets\Scripts\State.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>D:/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
